# ButteryTaskbar_Rust

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md  build.rs  build_release.bat
.trae/: plan.md
.trae/skills/release/: SKILL.md
ButteryTaskbar2_jai/: config.jai  main.jai  windows-extra.jai
src/: main.rs
