[package]
name = "buttery-taskbar"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
winreg = "0.55"
windows-sys = { version = "0.61", features = [
	"Win32_Foundation",
	"Win32_Graphics_Gdi",
	"Win32_System_Com",
	"Win32_System_Com_StructuredStorage",
	"Win32_System_LibraryLoader",
	"Win32_System_SystemInformation",
	"Win32_System_Variant",
	"Win32_UI_Accessibility",
	"Win32_UI_HiDpi",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_UI_Shell",
	"Win32_UI_Shell_PropertiesSystem",
	"Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
